# watery_terrain

./: .gitignore  Cargo.toml  GDD.md  Justfile  rust-toolchain.toml
.github/workflows/: ci.yaml
docs/: hard_terrain.md  water_v1.md
docs/.zk/: config.toml
docs/.zk/templates/: default.md
src/: heightmap.rs  main.rs  main_screen.rs  render.rs  screens.rs  terrain.wgsl  tooltip.rs  water.wgsl
src/gameplay/: mod.rs
src/render/: clipmap.rs  mod.rs  terrain.wgsl  water.wgsl
src/water_sim/: mod.rs  water.wgsl
